welcome.lessons.welcome.array.basics.Array1.scala.error
Array1:9: error: ';' expected but '=' found.
    T[i] = getCouleurSol()
         ^Array1:25: error: ']' expected but '(' found.
  setCouleurBrosse(T[Int(H-1)])
                        ^